--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "mcbbs-markdown2bbcode-converter",
+  "name": "u2-md2bbcode",
   "author": "ustc-zzzz",
   "version": "0.2.0",
   "main": "index.js",
-  "description": "The frontend of what converts Github Flavored Markdown to MCBBS Flavored BBCode",
+  "description": "The frontend of what converts Github Flavored Markdown to U2 Flavored BBCode",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ustc-zzzz/mcbbs-markdown2bbcode-converter.git"
+    "url": "git+https://github.com/Yesterday17/u2-md2bbcode.git"
   },
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/ustc-zzzz/mcbbs-markdown2bbcode-converter/issues"
+    "url": "https://github.com/Yesterday17/u2-md2bbcode.git/issues"
   },
-  "homepage": "https://github.com/ustc-zzzz/mcbbs-markdown2bbcode-converter#readme",
+  "homepage": "https://github.com/Yesterday17/u2-md2bbcode.git#readme",
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
-    "@types/clipboard": "^2.0.1",
-    "@types/marked": "^0.6.5",
     "clipboard": "^2.0.6",
-    "marked": "^0.7.0",
+    "markdown-it": "^12.0.6",
+    "markdown-it-container": "^3.0.0",
     "material-ui-popup-state": "^1.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/clipboard": "^2.0.1",
+    "@types/markdown-it": "^12.0.1",
+    "@types/markdown-it-container": "^2.0.3",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "clean-webpack-plugin": "^3.0.0",
